Alterando package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bernardonascimento.github.io/",
+  "homepage": "https://bernardonascimento.github.io/portifolio",
   "name": "portifolio",
   "version": "0.1.0",
   "private": true,
